<resources>
    <string name="app_name">App2Night</string>
    <string name="app_slogan">Let´s get App tonight!</string>

    <string name="title_activity_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_home">Home</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_addevent">Veranstaltung erstellen</string>
    <string name="action_findevent">Veranstaltung finden</string>
    <string name="action_profile">Profil</string>
    <string name="action_contact">Kontakt</string>
    <string name="action_test">Test</string>

    <string name="title_home">Übersicht</string>
    <string name="title_settings">Einstellungen</string>
    <string name="title_addevent">Hinzufügen</string>
    <string name="title_findevent">Event finden</string>
    <string name="title_profile">Profil</string>
    <string name="title_contact">Kontakt</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to FindEvent -->
    <string name="user_position">Standort</string>

    <!-- Strings related to login -->
    <string name="prompt_user_name">Benutzername</string>
    <string name="prompt_password">Passwort</string>
    <string name="prompt_email">E-Mail </string>
    <string name="prompt_password_repeat">Passwort nochmal eingeben</string>
    <string name="action_register">Registrieren</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="action_sign_in_short">Einloggen</string>
    <string name="error_invalid_user_name">Dieser Benutzername ist ungültig</string>
    <string name="error_invalid_email">Diese E-Mail Adresse ist ungültig</string>
    <string name="error_invalid_password">Dieses Passwort ist zu kurz</string>
    <string name="error_incorrect_password">Dieses Passwort ist ungültig</string>
    <string name="error_field_required">Benötigtes Feld</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>


    <!-- Strings related to Party -->
    <string name="party_name">Name der Veranstaltung</string>
    <string name="party_date">Datum</string>
    <string name="party_time">Zeit</string>
    <string name="music_genre">Musik Genre</string>
    <string name="party_price">Preis</string>
    <string name="country_name">Land</string>
    <string name="city_name">Stadt</string>
    <string name="street_name">Straßenname</string>
    <string name="house_number">Hausnummer</string>
    <string name="house_number_additional">Hausnummerzusatz</string>
    <string name="zipcode">Postleitzahl</string>
    <string name="party_type">Art der Veranstaltung</string>
    <string name="description">Beschreibung...</string>
    <string name="party_row_name">Das ist der Veranstaltungsname</string>
    <string name="party_row_host">Das ist der Veranstalter</string>
    <string name="party_row_location">Das ist der Veranstaltungsort</string>
    <string name="party_row_time">Das ist der Veranstaltungszeitpunkt</string>
    <string name="party_banner">Party Banner</string>
    <string name="party_price_tag">Preis Tag</string>
    <string name="party_nogps">Es ist ein Fehler aufgetreten, alte Daten geladen</string>
    <string name="error_description">Error Icon</string>

    <!-- Strings related to Settings -->
    <string name="wechseln">Wechseln</string>
    <string name="settings">Settings</string>

    <!--Strings related to DetailView-->
    <string name="detail_view_button_edit">Bearbeiten</string>
    <string name="detail_view_button_participate">Teilnehmen</string>
    <string name="detail_view_button_vote">Voten</string>
    <string name="detail_view_button_cancel_participation">Absagen</string>
    <string name="detail_view_button_cancel_event">Event absagen</string>
    <string name="price">Preis</string>
    <string name="voting_general">Gesamtbewertung</string>
    <string name="voting_location">Location</string>
    <string name="voting_price">Preis</string>
    <string name="voting_mood">Stimmung</string>

    <!--Strings related to ContactFragment-->
    <string name="contact_opening">Sofern Sie Fragen oder Rückmeldungen zu dieser App / zu diesem Dienst haben, zögern Sie nicht uns diese mitzuteilen. Wir würden uns freuen, von Ihnen zu hören.</string>
    <string name="contact_name">Ihr Name: </string>
    <string name="contact_name_hint">Hier bitte Ihren Namen eingeben</string>
    <string name="contact_mail">Ihre E-Mail Adresse: </string>
    <string name="contact_mail_hint">Hier bitte Ihre E-Mail Adresse eingeben</string>
    <string name="contact_message">Ihre Nachricht: </string>
    <string name="contact_message_hint">Hier bitte Ihre Nachricht eingeben</string>
    <string name="contact_button">Abschicken</string>

    <!--Strings related to FragmentProfile-->
    <string name="profile_description">Hier steht die Beschreibung</string>
    <string name="profile_adress">Hier steht die Adresse</string>
    <string name="profile_mail">Hier steht die Mail</string>
    <string name="profile_phone">Hier steht die Telefon Nummer</string>
    <string name="profile_name">Hier steht der Profil Name</string>
    <string name="icon_photo">Foto Platzhalter</string>
    <string name="icon_name">Name Icon</string>
    <string name="icon_phone">Phone Icon</string>
    <string name="icon_mail">Mail Icon</string>
    <string name="icon_location">Location Icon</string>
    <string name="icon_edit">Description Icon</string>


    <!--Strings related to AddEvent -->
    <string name="addevent_button_ok">Veranstaltung erstellen</string>

    <!--Strings related to ChangeEvent -->
    <string name="change_event_button_ok">Änderungen bestätigen</string>

    <!--Strings related to VoteDialog-->
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="price_rating">Price Rating</string>
    <string name="mood_rating">Mood Rating</string>
    <string name="location_rating">Location Rating</string>
    <string name="party_rating">Party Rating</string>
    <string name="thumb_icon">Thumb Icon</string>
    <string name="vote_dialog_title">Vote für die Party</string>

</resources>
