<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/detail_view_scrollview_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <com.google.android.gms.maps.MapView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:id="@+id/detail_view_mapView" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6">

                <TextView
                    android:id="@+id/detail_view_text_party_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/party_name"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                        <TextView
                            android:id="@+id/detail_view_text_street_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:scrollHorizontally="true"
                            android:text="@string/street_name" />

                    <TextView
                        android:id="@+id/detail_view_text_house_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:scrollHorizontally="true"
                        android:text="@string/house_number" />




                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/detail_view_text_zipcode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:scrollHorizontally="true"
                        android:text="@string/zipcode" />


                    <TextView
                        android:id="@+id/detail_view_text_city_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:scrollHorizontally="true"
                        android:text="@string/city_name" />


                </LinearLayout>

                <TextView
                    android:id="@+id/detail_view_text_country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="true"
                    android:text="@string/country_name" />


            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/input_party_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/party_date"
                    android:layout_weight="5"
                    android:textColor="?attr/editTextColor"
                    android:background="?attr/editTextBackground"
                    android:textAppearance="?android:attr/textAppearanceMediumInverse" />

                <TextView
                    android:id="@+id/input_party_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/party_time"
                    android:layout_weight="5"
                    android:textColor="?attr/editTextColor"
                    android:background="?attr/editTextBackground"
                    android:textAppearance="?android:attr/textAppearanceMediumInverse"/>

            </LinearLayout>


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_party_type"
                android:hint="@string/party_type"
                android:layout_margin="10dp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_music_genre"
                android:hint="music_genre"
                android:layout_margin="10dp"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <EditText
                    android:id="@+id/input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:minLines="5"
                    android:maxLines="5"
                    android:hint="@string/description"
                    android:gravity="top|center_vertical"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:text="@string/addevent_button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/addevent_button_ok"
                android:layout_margin="10dp"/>
        </LinearLayout>
        </LinearLayout>



    </ScrollView>
</LinearLayout>