<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/party_name"
            android:layout_weight="1" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_street_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7">

                <EditText
                    android:id="@+id/input_street_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/street_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_house_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <EditText
                    android:id="@+id/input_house_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/house_number" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_zipcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <EditText
                    android:id="@+id/input_zipcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/zipcode" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_city_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7">

                <EditText
                    android:id="@+id/input_city_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/city_name" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_country_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_country_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/country_name" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>



    <GridLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:rowCount="1"
        android:columnCount="2"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_party_date"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="150dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_party_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/party_date"
                android:layout_weight="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_party_time"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="150dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_party_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/party_time"
                android:layout_weight="1" />
        </android.support.design.widget.TextInputLayout>
    </GridLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_music_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_weight="1"
            android:hint="@string/music_genre"/>


        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_party_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_party_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/party_type" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/description" />
        </android.support.design.widget.TextInputLayout>



    </LinearLayout>

