<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profile_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/icon_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/profile_image"
                android:src="@drawable/placeholder2"
                />

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/profile_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:background="@color/screen_background"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="20dp"
                android:paddingRight="5dp"
                >


                <ImageView
                    android:contentDescription="@string/icon_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile_name"
                    android:id="@+id/profile_name"
                    />
                <ImageView
                    android:contentDescription="@string/icon_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile_phone"
                    android:id="@+id/profile_phone"
                    android:layout_below="@id/profile_name"
                    android:layout_marginTop="20dp"
                    />
                <ImageView
                    android:contentDescription="@string/icon_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile_mail"
                    android:id="@+id/profile_mail"
                    android:layout_below="@id/profile_phone"
                    android:layout_marginTop="20dp"
                    />
                <ImageView
                    android:contentDescription="@string/icon_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile_adress"
                    android:id="@+id/profile_adress"
                    android:layout_below="@id/profile_mail"
                    android:layout_marginTop="20dp"
                    />

                <ImageView
                    android:contentDescription="@string/icon_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_description"
                    android:layout_below="@id/profile_adress"
                    android:src="@drawable/profile_description"
                    android:layout_marginTop="20dp"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_name"
                    android:background="@drawable/shadow_edittext"
                    android:focusable="false"
                    android:layout_marginStart="50dp"
                    android:layout_toEndOf="@id/profile_name"
                    android:layout_alignTop="@id/profile_name"
                    android:layout_alignBottom="@id/profile_name"
                    android:id="@+id/profile_name_view"
                    android:layout_alignParentEnd="true"
                    android:shadowColor="@color/mdtp_dark_gray"
                    android:textAlignment="center"
                    android:textStyle="normal|italic"
                    android:textSize="18sp"
                    android:textAllCaps="false" />


                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_phone"
                    android:background="@drawable/shadow_edittext"
                    android:layout_marginStart="50dp"
                    android:layout_toEndOf="@id/profile_phone"
                    android:layout_alignTop="@id/profile_phone"
                    android:layout_alignBottom="@id/profile_phone"
                    android:inputType="phone"
                    android:id="@+id/profile_phone_view"
                    android:focusable="false"
                    android:layout_alignParentEnd="true"
                    android:shadowColor="@color/mdtp_dark_gray"
                    android:textAlignment="center"
                    android:textStyle="normal|italic"
                    android:textSize="18sp"
                    android:textAllCaps="false" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_mail"
                    android:background="@drawable/shadow_edittext"
                    android:layout_marginStart="50dp"
                    android:id="@+id/profile_mail_view"
                    android:focusable="false"
                    android:layout_toEndOf="@id/profile_mail"
                    android:layout_alignTop="@id/profile_mail"
                    android:layout_alignBottom="@id/profile_mail"
                    android:layout_alignParentEnd="true"
                    android:shadowColor="@color/mdtp_dark_gray"
                    android:textAlignment="center"
                    android:textStyle="normal|italic"
                    android:textSize="18sp"
                    android:textAllCaps="false" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_adress"
                    android:background="@drawable/shadow_edittext"
                    android:layout_marginStart="50dp"
                    android:id="@+id/profile_adress_view"
                    android:focusable="false"
                    android:layout_toEndOf="@id/profile_adress"
                    android:layout_alignTop="@id/profile_adress"
                    android:layout_alignBottom="@id/profile_adress"
                    android:layout_alignParentEnd="true"
                    android:shadowColor="@color/mdtp_dark_gray"
                    android:textAlignment="center"
                    android:textStyle="normal|italic"
                    android:textSize="18sp"
                    android:textAllCaps="false" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:hint="@string/profile_description"
                    android:background="@drawable/shadow_edittext"
                    android:layout_marginStart="50dp"
                    android:id="@+id/profile_description_view"
                    android:layout_toEndOf="@id/profile_description"
                    android:focusable="false"
                    android:layout_alignTop="@id/profile_description"
                    android:layout_alignParentEnd="true"
                    android:shadowColor="@color/mdtp_dark_gray"
                    android:textAlignment="center"
                    android:textStyle="normal|italic"
                    android:textSize="18sp"
                    android:textAllCaps="false" />
            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/profile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_settings_black_24dp"
        app:layout_anchor="@id/profile_image"
        app:layout_anchorGravity="bottom|end"/>

</android.support.design.widget.CoordinatorLayout>
